fix: added other module specific files and rust-analyzer generated file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Cargo.lock
 
 # Out-of-tree generated files
 src/**/*[*mod*,o*]
+*[cmd,symvers,order]
+
+# Generated rust-analyzer file
+rust-project.json
+
