--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "linux"]
 	path = linux
 	url = https://github.com/Rust-for-Linux/linux.git
+	ignore = all
 [submodule "busybox"]
 	path = busybox
 	url = https://github.com/mirror/busybox.git
+	ignore = all
