--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Cargo.lock
 **/*.rs.bk
 
 # Out-of-tree generated files
-src/**/*[*mod*,o*,c*,ko]
+**/*[*mod*,o*,c*,ko]
 *[Mm]odule*[cmd,symvers,order]
 
 # Generated rust-analyzer file
